inventory-erik/Service_inventory-erik_inventory-postgresql-headless.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: inventory
    meta.helm.sh/release-namespace: inventory-erik
  labels:
    app.kubernetes.io/instance: inventory
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-10.9.2
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: inventory-postgresql-headless
  namespace: inventory-erik-tgt
  selfLink: /api/v1/namespaces/inventory-erik/services/inventory-postgresql-headless
spec:
  clusterIP: None
  clusterIPs:
  - None
  ports:
  - name: tcp-postgresql
    port: 5432
    protocol: TCP
    targetPort: tcp-postgresql
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: inventory
    app.kubernetes.io/name: postgresql
  sessionAffinity: None
  type: ClusterIP
