inventory-erik/Ingress_inventory-erik_inventory.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
    meta.helm.sh/release-name: inventory
    meta.helm.sh/release-namespace: inventory-erik
  generation: 1
  labels:
    app: inventory
    chart: java-backend-0.1.0
    heritage: Helm
    release: inventory
  name: inventory
  namespace: inventory-erik-tgt
  selfLink: /apis/extensions/v1beta1/namespaces/inventory-erik/ingresses/inventory
spec:
  rules:
  - host: inventory.inventory-erik.10.19.2.21.nip.io
    http:
      paths:
      - backend:
          serviceName: inventory
          servicePort: 8080
        path: /
        pathType: Prefix
